# cla-rag-pipeline

./: .gitignore  README.md  pyproject.toml
src/notebooks/: 01-extraction-experiments.ipynb  02-chunking-experiments.ipynb
